[package]
name = "hyper-middleware"
description = "A compact HTTP middleware and handler system for Hyper 0.14"
version = "0.0.8"
authors = ["Jose Quintana <https://joseluisq.net>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/static-web-server/hyper-middleware"
documentation = "https://docs.rs/hyper-middleware"
edition = "2018"
categories = ["network-programming", "web-programming::http-server"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE"
]

keywords = [
    "hyper",
    "hyper-rs",
    "middleware",
    "service",
    "http-middleware",
]

[dependencies]
hyper = { version = "0.14.25", default-features = false, features = ["server", "tcp"] }
anyhow = "1.0.70"
thiserror = "1.0.40"
async-trait = "0.1.68"
async-recursion = "1.0.4"

[dev-dependencies]
hyper = { version = "0.14", features = ["tcp", "server", "http1"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], default-features = false }
